--- a/css/main.css
+++ b/css/main.css
@@ -9,15 +9,11 @@ div {
 
 #headline {
 	margin-left: -40%;
-	margin-bottom: -50px;
-	position: relative;
-	z-index: 2;
 }
 
 #band-picture{
 	max-width: 80%;
-	position: relative;
-	z-index: 1;
+	margin-bottom: 10px
 }
 
 #mobile-bio {
