--- a/css/main.css
+++ b/css/main.css
@@ -8,12 +8,16 @@ div {
 }
 
 #headline {
-	margin-left: -40%;
+	text-align: left;
+	border-bottom: 1px solid black;
+	padding-left: 20px;
+	padding-bottom: 21.440px;
+	margin-bottom: 0;
 }
 
 #band-picture{
 	max-width: 80%;
-	margin-bottom: 10px
+	margin: 20px 0;
 }
 
 #mobile-bio {
